# vxlgs

./: Cargo.toml  README.md  oldREADME.md
apps/client/: Cargo.toml
apps/server/: Cargo.toml
apps/studio/: Cargo.toml
crates/app/: cargo.toml
crates/app/src/: app.rs  main.rs
crates/engine/: cargo.toml
crates/math/: cargo.toml
crates/renderer/: cargo.toml
crates/renderer/src/: frame.rs  gpu.rs  lib.rs  pipeline.rs  surface.rs  window.rs
crates/shaders/: cargo.toml
crates/voxel/: cargo.toml
doc/: 0.0.index.md  1.1.introduction.md  1.2.architecture.md  1.3.dependencies.md  2.1.launcher.md  2.2.client.md  2.3.server.md  2.4.studio.md  3.1.core.md  3.2.logging.md  3.3.network.md  3.4.protocol.md  3.5.persistence.md  4.1.frontend.md  4.2.renderer.md  4.3.shaders.md  5.1.math.md  5.2.physics.md  5.3.behaviors.md  6.1.terrain.md  6.2.growth.md  6.3.structure.md  external.md  update_doc_nav.sh
libs/engine/behaviors/: Cargo.toml
libs/engine/physics/: Cargo.toml
libs/graphics/frontend/: Cargo.toml
libs/graphics/frontend/src/: window.rs
libs/graphics/renderer/: Cargo.toml
libs/graphics/renderer/src/: frame.rs  gpu.rs  lib.rs  pipeline.rs  resources.rs  surface.rs
libs/graphics/shaders/: Cargo.toml
libs/graphics/shaders/src/: shader.wgsl
libs/infra/core/src/: error.rs  (+2 more)
libs/infra/logging/: Cargo.toml
libs/infra/network/: Cargo.toml
libs/infra/persistence/: Cargo.toml
libs/prelude/: Cargo.toml
libs/prelude/src/: lib.rs
libs/voxel/growth/: Cargo.toml
libs/voxel/terrain/: Cargo.toml
src/: main.rs
src/event/: shader.wgsl  window.rs
