[package]

name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]

engine = { path = "../engine" }
math = { path = "../math" }
renderer = { path = "../renderer" }
shaders = { path = "../shaders" }
voxel = { path = "../voxel" }

anyhow = { workspace = true}
log = { workspace = true}
env_logger = { workspace = true}
pollster = { workspace = true }

winit = { version = "0.30", features = ["android-native-activity"] }
